tests/compile/compile_fail/direction_instead_of_point.stderr
error[E0308]: mismatched types
 --> tests/compile/compile_fail/direction_instead_of_point.rs:7:18
  |
7 |     set_position(d); // should fail
  |     ------------ ^ expected `Point3<_>`, found `Direction3<f32>`
  |     |
  |     arguments to this function are incorrect
  |
  = note: expected struct `echo_math::Point3<_>`
             found struct `echo_math::Direction3<f32>`
note: function defined here
 --> tests/compile/compile_fail/direction_instead_of_point.rs:3:4
  |
3 | fn set_position<T: Scalar>(p: Point3<T>) {}
  |    ^^^^^^^^^^^^            ------------

warning: unused variable: `p`
 --> tests/compile/compile_fail/direction_instead_of_point.rs:3:28
  |
3 | fn set_position<T: Scalar>(p: Point3<T>) {}
  |                            ^ help: if this is intentional, prefix it with an underscore: `_p`
  |
  = note: `#[warn(unused_variables)]` on by default
